# appflame

./: .gitignore  README.MD  pyproject.toml
notebooks/: AB_test.ipynb  fraud_detection.ipynb  frod_detection.ipynb
src/: appflame.py
