[tool.poetry]
name = "appflame"
version = "0.1.0"
description = "appflame test task"
authors = ["danilpolkov <danilpolkov14@rambler.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
